refactor es6 imports

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
           <a href="#" class="brand-logo right">{{title}}</a>
           <ul id="nav-mobile" class="left hide-on-small-only">
             <li><a [routerLink]="['/pokemons']" href="">Pokédex</a></li>
-            <li><a [routerLink]="['/movies']" href="">IMDb</a></li>
+            <li><a [routerLink]="['/movies']" href="">Movies</a></li>
           </ul>
         </div>
       </nav>
