update style files to sass

--- a/src/app/movie-card/movie-card.component.html
+++ b/src/app/movie-card/movie-card.component.html
@@ -1,4 +1,4 @@
-<div class="col-xs-12 cardcont no-padding">
+<div class="col-xs-12 movie-card-container no-padding">
   <div class="meta-data-container col s12 m8 push-m4 l7 push-l5">
     <h1>{{movie?.originalTitle}}</h1>
     <span class="tagline">{{movie?.tagline}}</span>
