--- a/src/app/movie-search-box/movie-search-box.component.html
+++ b/src/app/movie-search-box/movie-search-box.component.html
@@ -1,9 +1,11 @@
 <div class="col s12 search-container no-padding">
   <div class="row">
-    <div class="col s12 m6 l5">
-      <a href="./" title="Angular 2 TMDb Movie Search"><img [src]="movieServiceLogo" class="logo" alt="The Movie Database" /></a>
+    <div class="col s12 m4 l5">
+      <a href="./" title="Angular 2 TMDb Movie Search">
+        <img [src]="movieServiceLogo" class="logo" alt="The Movie Database" />
+      </a>
     </div>
-    <div class="col s12 m6 l7">
+    <div class="col s12 m8 l7">
       <div class="row search-container-box">
         <div class="input-field col s12 search-container-input suffix">
           <input id="autocomplete-input" type="text" class="validate"
