--- a/src/app/movie-search-box/movie-search-box.component.scss
+++ b/src/app/movie-search-box/movie-search-box.component.scss
@@ -1,7 +1,24 @@
-@import "../../styles/_variables.scss";
+@import "../../styles/_colors.scss";
 
 .search-container {
   margin-top: 50px;
+
+  .logo {
+    width: 100%;
+    max-width: 200px;
+    height: auto;
+    margin: 0;
+    margin-bottom: 25px;
+    display: block;
+  }
+
+  @media (max-width: 600px) {
+    .logo {
+      display: inline-block;
+      margin-bottom: 0;
+      max-width: 100%;
+    }
+  }
 
   .search-container-box {
     position: relative;
@@ -13,6 +30,19 @@
       height: 48px;
       margin-top: 0;
       top: 0;
+
+      i {
+        position: absolute;
+        width: 3rem;
+        font-size: 2rem;
+        transition: color .2s;
+        top: 0px;
+        right: 0px;
+
+        &.active {
+          color: #26a69a;
+        }
+      }
     }
 
     .search-container-results {
@@ -32,115 +62,19 @@
 
       ul {
         margin: 0;
-      }
 
-      .search-suggestion {
-        padding: 3px 20px;
-        font-size: 18px;
-        line-height: 24px;
-      }
+        .search-suggestion {
+          padding: 3px 20px;
+          font-size: 18px;
+          line-height: 24px;
 
-      .search-suggestion:hover {
-        color: $darkGrey;
-        background-color: $limeGreen;
-        cursor: pointer;
+          &:hover {
+            color: $darkGrey;
+            background-color: $limeGreen;
+            cursor: pointer;
+          }
+        }
       }
-
     }
-
-
-  }
-
-
-}
-
-/*
-.search-container .search-container-box {
-  position: relative;
-  min-height: 48px;
-  z-index: 100;
-}
-
-.search-container .search-container-box .search-container-input {
-  position: absolute;
-  height: 48px;
-  margin-top: 0;
-  top: 0;
-}
-
-.search-container .search-container-box .search-container-results {
-  position: absolute;
-  height: auto;
-  top: 48px;
-  animation: fadein ease-out 0.5s;
-  min-width: 100%;
-  margin-top: 10px;
-  margin-left: 10px;
-  padding: 5px 0;
-  background: rgba(0, 0, 0, 0.85);
-  border-radius: 4px;
-  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
-  background-clip: padding-box;
-  color: $lightGrey;
-}
-
-.search-container .search-container-box .search-container-results ul {
-  margin: 0;
-}
-
-.search-container .search-container-box .search-container-results .search-suggestion {
-  padding: 3px 20px;
-  font-size: 18px;
-  line-height: 24px;
-}
-
-.search-container .search-container-box .search-container-results .search-suggestion:hover {
-  color: $darkGrey;
-  background-color: $limeGreen;
-  cursor: pointer;
-}
-*/
-
-/*
-.input-field.suffix i {
-  position: absolute;
-  width: 3rem;
-  font-size: 2rem;
-  transition: color .2s;
-  top: 0px;
-  right: 0px;
-}
-
-.input-field.suffix i.active {
-  color: #26a69a;
-}
-
-.input-field.suffix input,
-.input-field.suffix textarea {
-  margin-right: 3rem;
-  width: 92%;
-  width: calc(100% - 3rem);
-}
-
-.input-field.suffix textarea {
-  padding-top: .8rem;
-}
-
-.input-field.suffix label {
-  margin-right: 3rem;
-}
-
-@media only screen and (max-width: 992px) {
-  .input-field.suffix input {
-    width: 86%;
-    width: calc(100% - 3rem);
   }
 }
-
-@media only screen and (max-width: 600px) {
-  .input-field.suffix input {
-    width: 80%;
-    width: calc(100% - 3rem);
-  }
-}
-*/
