--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-
+/*
 @import '~materialize-css/dist/css/materialize.min.css';
 
 :root {
@@ -46,3 +46,4 @@ nav {
   border-bottom: 1px solid #26a69a;
   box-shadow: 0 1px 0 0 #26a69a;
 }
+*/
